uspto-ohrs/main/schema/objects/Time_Slot__c/Time_Slot__c.object-meta.xml
<CustomObject>
    <label>Time Slot</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Time Slot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Slots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>