uspto-ohrs/main/schema/objects/Time_Slot__c/fields/Day__c.field-meta.xml
<CustomField>
    <fullName>Day__c</fullName>
    <label>Day</label>
    <type>Date</type>
</CustomField>