uspto-ohrs/main/schema/objects/Time_Slot__c/fields/Volunteer__c.field-meta.xml
<CustomField>
    <fullName>Volunteer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Volunteer</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Volunteer Time Slots</relationshipLabel>
    <relationshipName>Volunteer_Time_Slots</relationshipName>
    <type>Lookup</type>
</CustomField>